# iitm_feedback_report

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mock_data.json  pyproject.toml  requirements.txt  run_tasks.sh  test_api.py  test_celery.py
core/: settings.py  urls.py
report_generator/: models.py  tasks.py  urls.py  views.py
report_generator/migrations/: 0001_initial.py  0002_studentreport_delete_report_and_more.py  0003_report_delete_studentreport_and_more.py  0004_report_namespace_report_updated_at_and_more.py  0005_studentreport_delete_report_and_more.py  0006_remove_studentreport_report_gene_student_b92024_idx_and_more.py
